--- a/MySite/style.css
+++ b/MySite/style.css
@@ -132,6 +132,8 @@
 	                
 	                .gallery p {
 	                    text-align: center;
+						margin:20px;
+						font-size: 1.5em;
 	                }
 	                
 	                .portfolio img {
