--- a/MySite/style.css
+++ b/MySite/style.css
@@ -19,18 +19,21 @@
 	                .main {
 	                    margin: 0 auto 8vh auto;
 	                }
-	                
-	                nav li {
-	                    display: block;
-	                    float: left;
-	                    margin: 5px auto;
+					
+	                nav {
+						
+	                    
+	                    height:5vh;                    
 	                    font-family: 'Jura', sans-serif;
 	                    font-size: 1.3em;
-	                    width: 15vw;
+	                    width: 100%;
 	                }
 	                
 	                nav a {
-	                    color: white;
+						
+						color: white;
+						float:left;
+						margin:1% 3%;
 	                }
 	                
 	                nav a:hover {
@@ -43,10 +46,11 @@
 						transition-duration: 0.4s;}
 						
 	                header {
+						
 	                    color: white;
 	                    width: 100vw;
 	                    position: fixed;
-	                    height: 8vh;
+	                    height: 9vh;
 	                    background: -moz-linear-gradient(left, rgba(2, 1, 2, 0.76) 1%, rgba(20, 19, 20, 0.76) 8%, rgba(252, 252, 252, 1) 99%, rgba(255, 255, 255, 1) 100%);
 	                    /* FF3.6-15 */
 	                    background: -webkit-linear-gradient(left, rgba(2, 1, 2, 0.76) 1%, rgba(20, 19, 20, 0.76) 8%, rgba(252, 252, 252, 1) 99%, rgba(255, 255, 255, 1) 100%);
@@ -331,7 +335,10 @@
 	                #menubutton {
 	                    display: none;
 					}
+
+
 					footer{
+						height: 15vh;
 						color:white;
 						text-align: center;
 						background: -moz-linear-gradient(left, rgba(2, 1, 2, 0.76) 1%, rgba(20, 19, 20, 0.76) 8%, rgba(252, 252, 252, 1) 99%, rgba(255, 255, 255, 1) 100%);
