--- a/verbs/style.css
+++ b/verbs/style.css
@@ -1,8 +1,8 @@
 .wrapper {
     color: white;
     box-shadow: 0px 0px 50px rgba(51, 153, 255, .8);
-    width: 60%;
-    height: 750px;
+    width: 100vw;
+    height: 100vh;
     margin: 0 auto;
     font-family: Comic Sans MS;
     text-shadow: 10px 10px 20px rgba(0, 0, 0, 0.9);
@@ -12,7 +12,7 @@
 img {
     position: absolute;
     top: 340px;
-    left: 65%;
+    left: 65vw;
     display: block;
     width: 120px;
 }
@@ -37,9 +37,10 @@ h3 {
 }
 
 form {
-    margin: 40px 18%;
+    margin: 0 auto;
     font-family: Comic Sans MS;
-    display: flex;
+    width:80vw;
+    
 }
 
 a {
@@ -47,8 +48,8 @@ a {
 }
 
 input {
-    width: 200px;
-    height: 30px;
+    width: 25vw;
+    height: 5vh;
     background-image: url(nebo.jpg);
     font-family: Comic Sans MS;
     font-size: 1.5em;
@@ -66,18 +67,12 @@ img:active {
 
 #right {
     COLOR: BLUE;
-    margin: 20px;
-    position: absolute;
-    top: 15%;
-    left: 27%;
+    margin: 20px;   
     font-size: 1.5em;
 }
 
 #wron {
     color: red;
-    margin: 20px;
-    position: absolute;
-    top: 15%;
-    left: 67%;
+    margin: 20px;    
     font-size: 1.5em;
 }
