--- a/verbs/style.css
+++ b/verbs/style.css
@@ -1,7 +1,12 @@
+body{
+    width:100%;
+    margin:0 auto;
+}
+
 .wrapper {
     color: white;
     box-shadow: 0px 0px 50px rgba(51, 153, 255, .8);
-    width: 100vw;
+    width: 90vw;
     height: 100vh;
     margin: 0 auto;
     font-family: Comic Sans MS;
@@ -10,16 +15,17 @@
 }
 
 img {
-    position: absolute;
-    top: 340px;
-    left: 65vw;
     display: block;
     width: 120px;
+    position:absolute;
+    left:10px;
+    top:70vh;
 }
 
 h1 {
     font-size: 3em;
     text-align: center;
+    margin:0;
 }
 
 h2 {
@@ -31,25 +37,26 @@ h3 {
     color: red;
     text-align: center;
     font-size: 2em;
-    position: absolute;
-    top: 55%;
-    left: 25%;
 }
 
 form {
-    margin: 0 auto;
+    margin: 4vh auto;
     font-family: Comic Sans MS;
-    width:80vw;
-    
+    display: flex;
 }
 
 a {
     text-decoration: none;
 }
 
+p {
+   
+    width: 5vw;
+}
+
 input {
-    width: 25vw;
-    height: 5vh;
+    width: 30vw;
+    height: 30px;
     background-image: url(nebo.jpg);
     font-family: Comic Sans MS;
     font-size: 1.5em;
@@ -64,15 +71,32 @@ img:active {
     transform: scale(0.7);
     transition-duration: 0.3s;
 }
-
+.results{
+    width:100%;
+    height: 4vh;
+    display: flex;}
 #right {
     COLOR: BLUE;
-    margin: 20px;   
+    margin: 20px;
     font-size: 1.5em;
+    position:absolute;
+    left:65vw;
+    top:7vh;
+
 }
 
 #wron {
     color: red;
-    margin: 20px;    
+    margin: 20px;
     font-size: 1.5em;
+    position:absolute;
+    left:1vw;
+    top:7vh;
+}
+
+@media (max-width:980px) {
+    .wrapper {
+        width: 100vw;
+        font-size: 0.8em;
+    }
 }
