--- a/verbs/style.css
+++ b/verbs/style.css
@@ -1,12 +1,12 @@
-body{
-    width:100%;
-    margin:0 auto;
+body {
+    width: 100%;
+    margin: 0 auto;
 }
 
 .wrapper {
     color: white;
     box-shadow: 0px 0px 50px rgba(51, 153, 255, .8);
-    width: 90vw;
+    width: 100vw;
     height: 100vh;
     margin: 0 auto;
     font-family: Comic Sans MS;
@@ -17,15 +17,15 @@ body{
 img {
     display: block;
     width: 80px;
-    position:absolute;
-    left:10px;
-    top:60vh;
+    position: absolute;
+    left: 50px;
+    top: 60vh;
 }
 
 h1 {
     font-size: 3em;
     text-align: center;
-    margin:0;
+    margin: 0;
 }
 
 h2 {
@@ -50,7 +50,6 @@ a {
 }
 
 p {
-   
     width: 5vw;
 }
 
@@ -71,27 +70,29 @@ img:active {
     transform: scale(0.7);
     transition-duration: 0.3s;
 }
-.results{
-    width:100%;
+
+.results {
+    width: 100%;
     height: 4vh;
-    display: flex;}
+    display: flex;
+}
+
 #right {
     COLOR: BLUE;
     margin: 20px;
     font-size: 1.5em;
-    position:absolute;
-    left:65vw;
-    top:40vh;
-
+    position: absolute;
+    left: 65vw;
+    top: 40vh;
 }
 
 #wron {
     color: red;
     margin: 20px;
     font-size: 1.5em;
-    position:absolute;
-    left:3vw;
-    top:40vh;
+    position: absolute;
+    left: 3vw;
+    top: 40vh;
 }
 
 @media (max-width:980px) {
