--- a/academy/Google - Task/css/main.css
+++ b/academy/Google - Task/css/main.css
@@ -7,6 +7,10 @@ html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pr
     font-size: 100%;
     vertical-align: baseline;
 }
+a {
+  color: rgb(17, 58, 240) !important;
+  text-decoration: none
+}
 
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
     display: block;
@@ -186,3 +190,31 @@ main {
 #submit input:hover {
     box-shadow: 1px 1px 4px rgba(0, 0, 0, .7);
 }
+footer{width:100%;
+        position: absolute;
+	    bottom: 0;    
+	    font-size: 14px;
+background-color:  rgb(218, 233, 240);;
+
+	   }
+footer a{
+
+display:block;
+float:left;
+margin-left: 30px;
+margin-bottom: 15px;
+margin-top: 15px;
+margin-right: 0;
+}
+a:nth-child(6){margin-left: 43%;}
+
+::-webkit-scrollbar { width: 3px; height: 6px;}
+::-webkit-scrollbar-button {  background-color: #666; }
+::-webkit-scrollbar-track {  background-color: #999;}
+::-webkit-scrollbar-track-piece { background-color: #ffffff;}
+::-webkit-scrollbar-thumb { height: 50px; background-color: #666; border-radius: 3px;}
+::-webkit-scrollbar-corner { background-color: #999;}}
+::-webkit-resizer { background-color: #666;}
+
+
+
