--- a/academy/js-academy-4th-hw/src/styles/components/_sticker.scss
+++ b/academy/js-academy-4th-hw/src/styles/components/_sticker.scss
@@ -1,7 +1,8 @@
 .sticker{
-display:inline-block;
-height:10%;
+height:20%;
 position:sticky;
 top:0;
-left:1500px;
+left:600px;
+background-color:white;
+padding:20px;
 }
